# Minigin_Workspace

./: CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
Data/Audio_Tron1982/: Credits.txt
Data/LevelData/: 01.lvl
Data/LevelData/Coop/: 01.lvl  02.lvl  03.lvl
Data/LevelData/SinglePlayer/: 01.lvl
Data/LevelData/Versus/: 01.lvl
Game/: DamageOnCollision.cpp  DamageOnCollision.h  FPS_Display.cpp  FPS_Display.h  GameContext.cpp  GameContext.h  GameEvents.h  GameStates.cpp  GameStates.h  Main.cpp  MovePlayerCommand.cpp  MovePlayerCommand.h  PlayerManager.cpp  PlayerManager.h  PlayerMovementComp.cpp  PlayerMovementComp.h  SceneLoading.cpp  SceneLoading.h  TankManager.cpp  TankManager.h
Game/Commands/: ContinueSceneCommand.cpp  ContinueSceneCommand.h  DamageTankCommand.cpp  DamageTankCommand.h  MoveTankCommand.cpp  MoveTankCommand.h  ShootCommand.cpp  ShootCommand.h  StartGameCommand.cpp  StartGameCommand.h  ToggleGameModeCommand.cpp  ToggleGameModeCommand.h  ToggleMuteCommand.cpp  ToggleMuteCommand.h  TurnBarrelCommand.cpp  TurnBarrelCommand.h
Game/Commands/ScoreSaving/: CancelCharacterCommand.cpp  CancelCharacterCommand.h  SaveScoreCommand.cpp  SaveScoreCommand.h  ScrollLetterCommand.cpp  ScrolllLetterCommand.h
Game/Components/: DamageOnCollision.cpp  DamageOnCollision.h  GameManager.cpp  GameManager.h
Game/Components/Bullet/: BulletMovement.cpp  BulletMovement.h
Game/Components/Enemy/: AIMovement.cpp  AIMovement.h  AutoShooting.cpp  AutoShooting.h
Game/Components/System/: BulletPool.cpp  BulletPool.h  GameGrid.cpp  GameGrid.h  ScoreSaver.cpp  ScoreSaver.h  TankManager.cpp  TankManager.h
Game/Components/Tank/: RotateWithTank.cpp  RotateWithTank.h  TankBarrel.cpp  TankBarrel.h  TankHealth.cpp  TankHealth.h  TankMovement.cpp  TankMovement.h
Game/Components/Teleporter/: Teleporter.cpp  Teleporter.h
Game/Components/UI/: FPS_UI.cpp  FPS_UI.h  GameModeUI.cpp  GameModeUI.h  HudManager.cpp  HudManager.h  PlayerHealth_UI.cpp  PlayerHealth_UI.h  PlayerUI.cpp  PlayerUI.h  ScoreBoardUI.cpp  ScoreBoardUI.h  TotalScoreUI.cpp  TotalScoreUI.h
Game/Config/: BulletConfig.h  CollisionConfig.h  FileConfig.h  FileLocations.h  TankConfig.cpp  TankConfig.h
Game/Core/: GameContext.cpp  GameContext.h  GameModes.h  GameStates.cpp  GameStates.h  HighscoreManager.cpp  HighscoreManager.h  Main.cpp  PlayerDeviceMapper.cpp  PlayerDeviceMapper.h  PlayerSession.h  SceneLoading.cpp  SceneLoading.h  ScoreSystem.h  ScoreWriter.cpp  ScoreWriter.h
Game/Enemy/: AutoShooting.cpp  AutoShooting.h  EnemyBehaviour.cpp  EnemyBehaviour.h
Game/Events/: GameEvents.h  UIEvents.h
Game/Grid/: GameGrid.cpp  GameGrid.h
Game/Player/: PlayerInputConfig.h
Game/Tank/: PlayerBullet.cpp  PlayerBullet.h  RotateWithTank.cpp  RotateWithTank.h  TankBarrel.cpp  TankBarrel.h  TankConfig.cpp  TankConfig.h  TankHealth.cpp  TankHealth.h  TankManager.cpp  TankManager.h  TankMovement.cpp  TankMovement.h  TankVisuals.cpp  TankVisuals.h
Game/Tank/Bullet/: BulletConfig.h  BulletMovement.cpp  BulletMovement.h  BulletPool.cpp  BulletPool.h
Game/UI/: FPS_UI.cpp  FPS_UI.h  PlayerHealth_UI.cpp  PlayerHealth_UI.h  PlayerInfo_UI.cpp  PlayerInfo_UI.h
Minigin/: DeltaClock.cpp  DeltaClock.h  EventListener.h  EventSource.h  GameObject.cpp  GameObject.h  InputManager.cpp  Minigin.cpp  Minigin.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Singleton.h  Transform2D.cpp  Transform2D.h
Minigin/Audio/: ISoundSystem.h  LoggingSoundSystem.h  NullSoundSystem.h  SDLSoundSystem.cpp  SDLSoundSystem.h  SoundServiceLocator.cpp  SoundServiceLocator.h
Minigin/CollisionSystem/: BoxCollider2D.cpp  BoxCollider2D.h  CollisionSystem.cpp  CollisionSystem.h
Minigin/Collisions/: BoxCollider2D.cpp  BoxCollider2D.h  CollisionSystem.cpp  CollisionSystem.h
Minigin/Components/: Component.cpp  Component.h  Sprite.cpp  Sprite.h  TextComponent.cpp  TextComponent.h
Minigin/Config/: SpriteConfig.h
Minigin/Core/: DeltaClock.cpp  DeltaClock.h  EngineConfig.h  Minigin.cpp  Minigin.h  Singleton.h  Transform2D.cpp  Transform2D.h
Minigin/EngineComponents/: Component.cpp  Component.h  Sprite.cpp  Sprite.h  TextComponent.cpp  TextComponent.h
Minigin/Events/: EventSource.h  IEventListener.h  IObserver.h  Subject.h
Minigin/Helpers/: Random.h
Minigin/ImGUI/: imgui_CacheTester.cpp  imgui_plot.cpp
Minigin/Input/: AbstractInputSystem.cpp  AbstractInputSystem.h  GameObjectCommand.cpp  GameObjectCommand.h  Gamepad.cpp  IInputDevice.h  InputBinding.cpp  InputBinding.h  InputServiceLocator.cpp  InputServiceLocator.h  SceneInput.cpp  SceneInput.h
Minigin/InputHandling/: Command.h  GameObjectCommand.cpp  GameObjectCommand.h  Gamepad.cpp  Gamepad.h  ICommand.h  IInputDevice.h  InputBinding.cpp  InputBinding.h  InputCodes.h  InputDevice.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  SceneInput.cpp  SceneInput.h
Minigin/InputSystem/: AbstractInputSystem.cpp  AbstractInputSystem.h  InputServiceLocator.cpp  InputServiceLocator.h
Minigin/Platform/: SDL_GamePad.cpp  SDL_GamePad.h  SDL_InputSystem.cpp  SDL_InputSystem.h  SDL_Keyboard.cpp  SDL_Keyboard.h  XINPUT_Gamepad.cpp  XINPUT_Gamepad.h
Minigin/Rendering/: Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SDLFont.cpp  SDLFont.h  SDLRenderer.cpp  SDLRenderer.h  SDLTexture2D.cpp  SDLTexture2D.h  SpriteConfig.h
Minigin/SDL_Implementation/: SDLFont.cpp  SDLFont.h  SDLSoundSystem.cpp  SDLSoundSystem.h  SDLTexture2D.cpp  SDLTexture2D.h  SDL_GamePad.cpp  SDL_GamePad.h  SDL_InputSystem.cpp  SDL_InputSystem.h  SDL_Keyboard.cpp  SDL_Keyboard.h
Minigin/Scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Minigin/SoundSystem/: ISoundSystem.h  InternalSSHelper.h  LoggingSoundSystem.h  NullSoundSystem.h  SoundServiceLocator.cpp  SoundServiceLocator.h
Minigin/Types/: Font.cpp  Font.h  SourceRect.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h
